Opened 11 years ago
Closed 11 years ago
#2451 closed bug (fixed)
uname -a display BeOS instead of Haiku
Reported by: | emitrax | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | R1/pre-alpha1 |
Keywords: | Cc: | andreas.faerber@…, mdisreali@… | |
Blocked By: | Blocking: | ||
Has a Patch: | no | Platform: | All |
Description
I think it's time to update platforms_types as uname -a prints BePC and BeOS instead of Haiku and i{3,4,5,6}86.
Change History (17)
comment:1 by , 11 years ago
comment:2 by , 11 years ago
Cc: | added |
---|
Doesn't this break automake and friends, or has Ingo already prepared for this? That would be very bad if this bug is just about cosmetic uname
output.
comment:3 by , 11 years ago
Well, in the long term we don't really want to be identified as uname BeOS anyways, since for a lot of ports that enables tons of hacks around POSIX problems, etc. that we no longer need, as you well know. Not sure as to the current state of things though with respect to automake and such.
comment:4 by , 11 years ago
This only affects the output of "uname -o" and "uname -a" - configure scripts should usually use "uname -s" or something else instead.
follow-up: 7 comment:5 by , 11 years ago
As far as I know they use uname -s which outputs already Haiku, but I'd like to hear Ingo about it. Anyway, as Renè said already, Haiku is not BeOS and better fix this sooner than later.
comment:6 by , 11 years ago
Sure it should be changed. I was just raising the issue that, first, it should be checked whether any Optional Package may need to be updated before committing lots of (necessary but potentially breaking) changes. If you've checked that it doesn't affect the Development package, then I'm okay with it. I was just missing a statement that this has been thought of.
follow-up: 8 comment:7 by , 11 years ago
Replying to emitrax:
As far as I know they use uname -s which outputs already Haiku, but I'd like to hear Ingo about it.
I haven't seen any tool evaluating "uname -o" so far. Not that I have looked for that particularly, though.
Anyway, if we change BePC this will have consequences. We might want to do that together with dropping __BEOS__.
follow-up: 9 comment:8 by , 11 years ago
Replying to bonefish:
I haven't seen any tool evaluating "uname -o" so far. Not that I have looked for that particularly, though.
Funny thing is that discovered this bug by running the configure of cscope which uses uname -o, anyway that's not the point.
Anyway, if we change BePC this will have consequences. We might want to do that together with dropping __BEOS__.
Ok. Has any plan been made about that? Is it going to be after R1?
comment:9 by , 11 years ago
Replying to emitrax:
Has any plan been made about that? Is it going to be after R1?
I think the plan was to drop it asap, to allow proper porting. But it requires someone knowledgeable to fix GCC's headers, they depended on __BEOS__
last time I checked. Not sure if we have a ticket for that.
comment:10 by , 11 years ago
Is there something that still needs to be fixed here?
~> uname -s Haiku ~> uname Haiku ~> uname -o Haiku ~> uname -a Haiku haikubox 1 r29127 Feb 3 2009 09:58:35 BePC Haiku
comment:14 by , 11 years ago
From config.guess:
BeBox:BeOS:*:*) # BeOS running on hardware made by Be, PPC only. echo powerpc-be-beos exit ;; BeMac:BeOS:*:*) # BeOS running on Mac or Mac clone, PPC only. echo powerpc-apple-beos exit ;; BePC:BeOS:*:*) # BeOS running on Intel PC compatible. echo i586-pc-beos exit ;; BeMac:Haiku:*:*) echo powerpc-apple-haiku exit ;; BePC:Haiku:*:*) echo i586-pc-haiku exit ;;
So if we were to drop "BePC" it would affect ALL ports that relay on config.guess. Not sure what we've even change it to, i686:Haiku, PPC:Haiku, X64:Haiku?
So a change to uname should have a matching change to our config.guess
comment:15 by , 11 years ago
I wouldn't change the "BePC" for x86. This just causes unnecessary inconveniences for porters without any benefit. The "BeMac" could still be changed to "PowerPC". There aren't any ports for PPC ATM, so if the change to config.guess is upstreamed now, it might have found its way into most packages by the time it becomes relevant. For all newer/other architectures (x86_64, m68k,...) adequate machine names should be chosen.
comment:16 by , 11 years ago
Cc: | added |
---|
comment:17 by , 11 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Completely agreed - but this also means we can close this ticket, I guess.
uname now reports the OS as "Haiku" as of hrev26130. Platform (ie. machine) and processor are still wrong, though.