* "uname" now reports the operating system as "Haiku". * This fixes a part of bug #2451.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@26130 a95241bf-73f2-0310-859d-f6bbb57e9c96